# exovetter

./: .readthedocs.yml  CHANGES.rst  CITATION.cff  MANIFEST.in  README.rst  conftest.py  prcheck.bsh  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: ci_workflows.yml  publish.yml
docs/: api.rst  index.rst  install.rst  utils.rst  vetters.rst  vetters_low_level.rst
example_notebooks/: Centorid_Vetting_Example.ipynb  Centroid_Vetting_Example.ipynb  TCE_example.ipynb  Untitled.ipynb  exovetter_centroid_and_plotting_example.ipynb  exovetter_robovetting_example.ipynb  trapezoid_fit_simple.ipynb
example_notebooks/current_vetter_examples/: ._wasp18b_lc.fits  experimental_mit_vetters.ipynb  lpp_example.ipynb  modshift_example.ipynb  obtaining_a_TCE_and_lightcurve.ipynb  odd_even_example.ipynb  sweet_example-Copy1.ipynb  transit_events_testing.ipynb  transit_phase_coverage_example.ipynb  viz_transits_example.ipynb  wasp18b_lc.fits
exovetter/: __init__.py  __init__.py.mine  const.py  junk  lcutils.py  leo.py  lightkurve_utils.py  lpp.py  main.py  model.py  odd_even.py  single_transit.py  sweet.py  tce.py  transit_coverage.py  transit_event_stats.py  transitlc.py  trapezoid_fit.py  utils.py  vetters.py  viz_transits.py
exovetter/centroid/: centroid.py  covar.py  demo.py  disp.py  fastpsffit.py  sector_centroid.py  tesscentroid.py  untitled0.py
exovetter/lpp/: loadLppData.py  lpp.py
exovetter/michelle_files/: classes.py  metrics.py  michelle_utils.py  plotting.py
exovetter/modshift/: __init__.py  main.py  modshift.py  names.py  plotmodshift.py
exovetter/tess_vetter/: classes.py  metrics.py  plotting.py  utils.py
licenses/: DAVE_LICENSE  README.rst
new_example_notebooks/: LEO.ipynb  LPP.ipynb  OddEven.ipynb  SWEET.ipynb  TCEs.ipynb  TransitPhaseCoverage.ipynb  WASP18b_lightcurve.fits  lightcurves.ipynb  modshift.ipynb
tests/: README.rst  lpp_test.py  pytest_utils.py  regression_tests.py  susan_test.py  test_core.py  test_lpp.py  test_model.py  test_modshift.py  test_odd_even.py  test_sweet.py  test_tce.py  test_tess_vetter.py  test_transit_coverage.py  test_trapz_fit.py  test_utils.py  test_vetter.py  test_vetters.py
tests/data/: tce-test.json  wasp18b_flat_lightcurve.csv
tests/modshift/: test_modshift.py
tutorial_notebooks/: Centroid.ipynb  CentroidSectors.ipynb  LEO.ipynb  LPP.ipynb  LeoTransitEvents.ipynb  OddEven.ipynb  SWEET.ipynb  TCEs.ipynb  TransitPhaseCoverage.ipynb  VizTransits.ipynb  lightcurves.ipynb  modshift.ipynb  run_all.ipynb  wasp18b.fits  wasp18b_tce
