[build-system]
requires = ["setuptools",
            "setuptools_scm",
            "wheel"]
build-backend = 'setuptools.build_meta'

[project]
name = "exovetter"
version = "0.0.2"
description = "Transiting Exoplanet Vetting Package for TESS and Kepler"
authors = [{ names = "Susan Mullally", email="smullally@stsci.edu"}]
readme = "README.rst"
license = {file="LICENSE"}
requires-python = ">=3.7"
